# pratyaksh_suite

./: .gitignore  LICENSE  README.md
pratyaksh-website/: index.html  package-lock.json  package.json  tailwind.config.js
pratyaksh-website/src/: App.jsx
pratyaksh-website/src/components/: AccessGuard.jsx  Calculators.jsx  Footer.jsx  Navbar.jsx  Tools.jsx
pratyaksh-website/src/data/: constants.js
pratyaksh-website/src/lib/: firebase.js
pratyaksh-website/src/pages/: About.jsx  ApprovalWait.jsx  Contact.jsx  Download.jsx  GenericPage.jsx  Home.jsx  Modules.jsx  Payment.jsx  Pricing.jsx  Resources.jsx  Tools.jsx
pratyaksh_ai/admin_console_windows/: Cargo.toml
pratyaksh_ai/admin_console_windows/src/: dashboard.rs  firebase_api.rs  main.rs  models.rs
pratyaksh_ai/android_admin/: build.gradle  gradle.properties  package-lock.json  settings.gradle
pratyaksh_ai/android_admin/app/: build.gradle  google-services.json
pratyaksh_ai/android_admin/app/src/main/: AndroidManifest.xml
pratyaksh_ai/android_admin/app/src/main/res/drawable/: ic_launcher_background.xml
pratyaksh_ai/android_admin/app/src/main/res/layout/: activity_admin_main.xml  item_payment_request.xml
pratyaksh_ai/android_admin/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
pratyaksh_ai/android_client/: build.gradle.kts  settings.gradle.kts
pratyaksh_ai/android_client/app/: build.gradle.kts
pratyaksh_ai/android_client/app/src/main/: AndroidManifest.xml
pratyaksh_ai/backend/: Cargo.toml
pratyaksh_ai/backend/src/: main.rs
pratyaksh_ai/windows_client/: Cargo.toml
pratyaksh_ai/windows_client/src/: main.rs
pratyaksh_suite/: docker-compose.yml
pratyaksh_suite/backend/app/: main.py
pratyaksh_suite/backend/app/db/: session.py
pratyaksh_suite/backend/app/modules/client_risk/: logic.py  routes.py
pratyaksh_suite/backend/app/modules/compliance/: logic.py
pratyaksh_suite/backend/app/modules/evidence/: models.py
pratyaksh_suite/backend/app/modules/governance/: logic.py  models.py  routes.py
pratyaksh_suite/backend/app/modules/regional/: logic.py  routes.py
pratyaksh_suite/frontend/: pubspec.yaml
pratyaksh_suite/frontend/lib/core/: api_client.dart
pratyaksh_suite/frontend/lib/features/dashboard/: home_screen.dart
pratyaksh_suite/frontend/lib/features/regional/: stamp_duty_screen.dart
pratyaksh_suite/frontend/lib/features/risk_assessment/: client_risk_screen.dart
(+8 files in other folders)
