[package]
name = "pratyaksh_admin"
version = "1.0.0"
edition = "2021"

[dependencies]
# GUI Framework
eframe = "0.26"
egui_extras = { version = "0.26", features = ["all_loaders"] }
image = { version = "0.24", features = ["jpeg", "png"] }

# Async Runtime & Networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Data Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Utilities
hex = "0.4"
sha2 = "0.10"