[package]
name = "pratyaksh_desktop"
version = "4.0.0"
edition = "2021"

[dependencies]
# GUI & Graphics
eframe = "0.26"
# FIX: Added "datepicker" to features list below
egui_extras = { version = "0.26", features = ["all_loaders", "datepicker"] }
image = { version = "0.24", features = ["jpeg", "png"] }

# Real Data Storage (SQLite)
rusqlite = { version = "0.31", features = ["bundled"] }

# Real Time Logic
chrono = { version = "0.4", features = ["serde"] }

# Utils
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }