[package]
name = "pratyaksh_desktop"
version = "8.0.0"
edition = "2021"

[dependencies]
eframe = "0.26"
egui_extras = { version = "0.26", features = ["all_loaders", "datepicker"] }
image = { version = "0.24", features = ["jpeg", "png"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }